# modified_pure_pursuit_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: control_pid.yaml  modified_pure_pursuit.yaml  pure_pursuit.rviz  visualize.rviz
docs/: documentation.md
launch/: turtlebot3_gazebo.launch
src/: approach1_ros.py  approach1_simulation.py  approach2_ros.py  approach2_simulation.py  plot_signals.py
